<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2024 LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/spoofing_title">

    <!-- Play Integrity Fix -->
    <Preference
        android:key="play_integrity_fix"
        android:icon="@drawable/ic_fingerprint"
        android:title="@string/play_integrity_fix_title"
        android:summary="@string/play_integrity_fix_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.PlayIntegrityFix" />

    <!-- TrickyStore -->
    <Preference
        android:key="tricky_store"
        android:icon="@drawable/ic_vpn_key"
        android:title="@string/tricky_store_title"
        android:summary="@string/tricky_store_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.TrickyStore" />

    <!-- Game Spoofing -->
    <Preference
        android:key="game_spoofing"
        android:icon="@drawable/ic_swap_horiz"
        android:title="@string/game_spoofing_title"
        android:summary="@string/game_spoofing_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.GameSpoofing" />

    <!-- Mock location -->
    <SwitchPreferenceCompat
        android:key="hide_mock_location"
        android:icon="@drawable/ic_location"
        android:title="@string/hide_mock_location_title"
        android:summary="@string/hide_mock_location_summary"
        android:defaultValue="false" />

    <!-- Hide app overlays -->
    <SwitchPreferenceCompat
        android:key="hide_app_overlays"
        android:icon="@drawable/ic_settings_spoofing"
        android:title="@string/hide_app_overlays_title"
        android:summary="@string/hide_app_overlays_summary"
        android:defaultValue="false" />

    <!-- Hide developer status -->
    <Preference
        android:key="hide_developer_status"
        android:icon="@drawable/ic_settings_backup_restore"
        android:title="@string/hide_developer_status_title"
        android:summary="@string/hide_developer_status_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.HideDeveloperStatus" />

    <!-- Hide and block GMS -->
    <Preference
        android:key="hide_gms"
        android:icon="@drawable/ic_settings_spoofing"
        android:title="@string/hide_gms_title"
        android:summary="@string/hide_gms_summary"
        android:fragment="org.lineageos.lineageparts.spoofing.HideGms" />

</PreferenceScreen>
