<?xml version="1.0" encoding="UTF-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="misc_settings"
    android:title="@string/misc_settings_title">


    <PreferenceCategory
        android:key="quicksettings_category"
        android:title="@string/quicksettings_title">

        <com.android.settings.custom.preference.SystemSettingListPreference
            android:key="qs_tile_shape"
            android:title="@string/qs_tile_shape_title"
            android:entries="@array/qs_tile_shape_entries"
            android:entryValues="@array/qs_tile_shape_values"
            android:defaultValue="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="spoofing_category"
        android:title="@string/spoofing_title">

        <Preference
            android:key="spoofing"
            android:title="@string/spoofing_title"
            android:fragment="org.lineageos.lineageparts.spoofing.Spoofing" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="screenshot_category"
        android:title="@string/screenshot_title">

        <lineageos.preference.LineageSystemSettingSwitchPreference
            android:key="screenshot_clipboard_only"
            android:title="@string/lineage_screenshot_clipboard_only_title"
            android:summary="@string/lineage_screenshot_clipboard_only_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>
