<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:entries="@array/network_traffic_mode_entries"
        android:entryValues="@array/network_traffic_mode_values"
        android:key="network_traffic_mode"
        android:persistent="false"
        android:title="@string/network_traffic_mode_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:entries="@array/network_traffic_position_entries"
        android:entryValues="@array/network_traffic_position_values"
        android:key="network_traffic_position"
        android:persistent="false"
        android:title="@string/network_traffic_position_title"
        app:useSimpleSummaryProvider="true" />

    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:defaultValue="false"
        android:key="network_traffic_autohide"
        android:summary="@string/network_traffic_autohide_summary"
        android:title="@string/network_traffic_autohide" />

    <lineageos.preference.LineageSecureSettingSwitchPreference
        android:defaultValue="false"
        android:key="network_traffic_hide_arrows"
        android:summary="@string/network_traffic_hide_arrows_summary"
        android:title="@string/network_traffic_hide_arrows" />

    <ListPreference
        android:entries="@array/network_traffic_units_entries"
        android:entryValues="@array/network_traffic_units_values"
        android:key="network_traffic_units"
        android:persistent="false"
        android:title="@string/network_traffic_units_title"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:entries="@array/network_traffic_show_units_entries"
        android:entryValues="@array/network_traffic_show_units_values"
        android:key="network_traffic_show_units"
        android:persistent="false"
        android:title="@string/network_traffic_show_units"
        app:useSimpleSummaryProvider="true" />

    <org.lineageos.lineageparts.widget.CustomSeekBarPreference
        android:defaultValue="14"
        android:key="network_traffic_text_size_single"
        android:max="24"
        android:title="@string/network_traffic_text_size_single_title"
        app:interval="1"
        app:min="8"
        app:settingsType="lineage_secure"
        app:units="sp" />

    <org.lineageos.lineageparts.widget.CustomSeekBarPreference
        android:defaultValue="10"
        android:key="network_traffic_text_size_single_compact"
        android:max="20"
        android:title="@string/network_traffic_text_size_single_compact_title"
        app:interval="1"
        app:min="6"
        app:settingsType="lineage_secure"
        app:units="sp" />

    <org.lineageos.lineageparts.widget.CustomSeekBarPreference
        android:defaultValue="8"
        android:key="network_traffic_text_size_multi"
        android:max="18"
        android:title="@string/network_traffic_text_size_multi_title"
        app:interval="1"
        app:min="6"
        app:settingsType="lineage_secure"
        app:units="sp" />

</PreferenceScreen>
