<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2024 LineageOS Project
    SPDX-License-Identifier: Apache-2.0
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_settings_24dp"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/show_system"
        android:title="@string/menu_show_system"
        android:showAsAction="never" />

    <item
        android:id="@+id/hide_system"
        android:title="@string/menu_hide_system"
        android:showAsAction="never" />
</menu>
